Fixed image links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- ===== LINKS ===== -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- ===== fav-icon ===== -->
-    <link rel="shortcut icon" href="../tara/assets/img/fav-icon.png">
+    <link rel="shortcut icon" href="assets/img/fav-icon.png">
 
     <title>TARA Web Agency</title>
 </head>
@@ -18,7 +18,7 @@
     <section class="main">
         <!-- ===== NAVIGATION ===== -->
         <nav class="nav">
-            <a href="#" class="logo"> <img src="../tara/assets/img/logo.png" alt="tara-logo"></a>
+            <a href="#" class="logo"> <img src="assets/img/logo.png" alt="tara-logo"></a>
             <input class="menu-btn" type="checkbox" id="menu-btn">
             <label class="menu-icon" for="menu-btn">
                 <span class="nav-icon"></span>
@@ -43,7 +43,7 @@
                 <a href="#" class="main-login">Log in</a>
             </div>
             <div class="home-img">
-                <img src="../tara/assets/img/web design.png" alt="web-design-image">
+                <img src="assets/img/web design.png" alt="web-design-image">
             </div>
         </div>
 
@@ -75,7 +75,7 @@
         <!-- ===== BOX-CONTAINER ===== -->
         <div class="box-container">
             <div class="box">
-                <img src="../tara/assets/img/login.svg" alt="login-image">
+                <img src="assets/img/login.svg" alt="login-image">
                 <span>Log-In to our secure website</span>
                 <p>To begin the process, please Log-In to our secure system. Everything you need to Log-In is available
                     in the communication letter you have received from us.</p>
@@ -83,7 +83,7 @@
             </div>
 
             <div class="box">
-                <img src="../tara/assets/img/account view.svg" alt="account-view-image">
+                <img src="assets/img/account view.svg" alt="account-view-image">
                 <span>View Your Website</span>
                 <p>You will have a chance to review your account for accuracy and update your contact information.
                     Should you find any incorrect information on your account or if you prefer to talk to us directly,
@@ -92,7 +92,7 @@
             </div>
 
             <div class="box">
-                <img src="../tara/assets/img/payment method.svg" alt="payment-method-image">
+                <img src="assets/img/payment method.svg" alt="payment-method-image">
                 <span>Select Your Plan</span>
                 <p>In addition to the payment in full, we may offer you a discount for making online payments, allow
                     you to schedule payments over time, or have you define the payment terms that best work for your
@@ -101,14 +101,14 @@
             </div>
 
             <div class="box">
-                <img src="../tara/assets/img/lock.svg" alt="lock-image">
+                <img src="assets/img/lock.svg" alt="lock-image">
                 <span>Login in secure website</span>
                 <p>You can make secure online payments from the privacy of your home 24/7.</p>
                 <a href="#">Log In</a>
             </div>
 
             <div class="box">
-                <img src="../tara/assets/img/document.svg" alt="document-image">
+                <img src="assets/img/document.svg" alt="document-image">
                 <span>Confrim Your Websites</span>
                 <p>When you make payment(s), we will issue you an electronic receipt. You can also log in any time to
                     get the most up-to-date receipt.</p>
